# HeteroBuilder

./: .gitignore  README.md  pyproject.toml
structure_comparison/: vdW_structure.py
structure_generation/: unique_structures.py
tests/: example.ipynb
tests/.ipynb_checkpoints/: BiSe2-checkpoint.vasp
tests/original_structures/: Bi3Se4.vasp  Bi4Se3.vasp  Bi8Se9.vasp  BiSe.vasp  BiSe2_optimized.vasp  Bi_monoclinic.vasp  Fe2TeSe.vasp
vdW_structures/: layer_shifter.py  unique_structures.py  vdW_heterostructure.py  vdW_structure.py
